# space_cms

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  cli.sh
app/: Cargo.toml
app/src/: app.rs  main.rs
commands/: dev.sh
commands/make/service/_maker_system/skeletons/docker/<new_service_name>/: compose.yml
commands/services/db/container-management/: logs-cat.sh  logs-tail.sh  shell.sh
commands/services/db/in-container/: start-service.sh
commands/services/web/in-container/: start-dev.sh
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/backend/src/api/: routes.rs
crates/backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs  routes.rs
crates/backend/src/db/: mod.rs
crates/backend/src/services/: mod.rs
crates/common/services_manager/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/frontend/src/api/: auth.rs
crates/frontend/src/components/: home.rs  mod.rs
crates/frontend/src/pages/: home_page.rs  login.rs  mod.rs  register.rs
crates/services/web/: Cargo.toml  Leptos.toml  README.md
crates/services/web/src/: app.rs  lib.rs  main.rs
crates/services/web/src/components/: mod.rs
crates/services/web/src/components/contents/: mod.rs
crates/services/web/src/components/header/: mod.rs
crates/services/web/src/components/home/: hero.rs  mod.rs
crates/services/web/src/components/layout/: footer.rs  header.rs  mod.rs  shell.rs
crates/services/web/src/components/search/: mod.rs
crates/services/web/src/config/: mod.rs  site.rs
crates/services/web/src/pages/: home.rs  mod.rs  not_found.rs
crates/services/web/src/routes/: app_routes.rs  mod.rs
crates/services/web/src/server/: config.rs  mod.rs
crates/services/web/src/types/: article.rs  mod.rs
crates/services/web/style/: README.md  main.css  main.scss
crates/services/web/style/abstracts/: _breakpoints.scss  _index.scss  _mixins.scss  _variables.scss
crates/services/web/style/base/: _index.scss  _reset.scss  _typography.scss
crates/services/web/style/components/: _article-card.scss  _contents.scss  _index.scss  _search.scss  _tagline.scss
crates/services/web/style/layout/: _header.scss  _index.scss
crates/services/web/style/pages/: _home.scss  _index.scss
crates/shared/: Cargo.toml
crates/shared/src/: models.rs
docker/web/: Dockerfile  compose.yml  post_build.sh
docs/: AUTHENTICATION.md  DATABASE.md
migrations/: 20240101000000_initial_schema.sql  20240102000000_add_password_to_users.sql
