[workspace]
resolver = "3" 
members = [
    "crates/common/httpserver", 
    "crates/common/services_manager",
    "crates/services/web",
]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
