[package]
name = "space_cms_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
space_cms_shared = { path = "../shared" }
serde = { workspace = true }