[package]
name = "space_cms_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
space_cms_shared = { path = "../shared" }
serde = { workspace = true }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = "9.0"
bcrypt = "0.15"
once_cell = "1.0"